# Multimodal-RAG-Retrieval-Augmented-Generation-System

./: PROJECT_SUMMARY.md  README.md  docker-compose.yml  fresh_start.py  test.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: chat.py  documents.py  health.py  router.py  upload.py
backend/app/core/: config.py  logging.py
backend/app/db/: init_db.py  migrate_add_progress.py  migrate_add_sources.py  migrate_add_status.py  session.py
backend/app/models/: document.py  message.py
backend/app/repositories/: document_repo.py  message_repo.py  session_repo.py
backend/app/schemas/: chat.py  document.py
backend/app/services/: llm_service.py  pdf_service.py  rag_service.py  summary_service.py  vector_service.py
backend/app/utils/: file.py  rate_limit.py
backend/reference code/: langchain_multimodal.ipynb  test-llm.ipynb
backend/reference code/embeddings/: Qwen3_Embedding_0_6B.ipynb  inference_embeddinggemma_with_sentence_transformers.ipynb  jina_embeddings_v4.ipynb
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  Message.tsx  SidebarChats.tsx  SidebarDocuments.tsx  SourceCard.tsx  ThemeToggle.tsx  UploadDropzone.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
